[package]
name = "OK"
version = "0.1.4"
edition = "2024"

[dependencies]
objdiff-core = { git = "https://github.com/encounter/objdiff", tag = "v3.3.1", subdir = "objdiff-core", features = ["bindings", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argp = "0.4"
ts-rs = "10.1"
tabled = "0.20.0"

